# mochi-kage

./: CMakeLists.txt  README.md  build.sh  initial-setup.json  spack.yaml
.github/workflows/: build-latest.yml  test.yml
examples/: CMakeLists.txt  bedrock-config.json  client.cpp  server.cpp
include/kage/: AsyncRequest.hpp  Backend.hpp  Client.hpp  Exception.hpp  InputOutputManager.hpp  InputProxy.hpp  Provider.hpp  ProviderHandle.hpp  ProxyHandle.hpp  Result.hpp
src/: AsyncRequest.cpp  AsyncRequestImpl.hpp  Backend.cpp  BedrockModule.cpp  CMakeLists.txt  Client.cpp  ClientImpl.hpp  Provider.cpp  ProviderImpl.hpp  ProxyHandle.cpp  ProxyHandleImpl.hpp  Serialization.hpp  kage-client.pc.in  kage-config.cmake.in  kage-server.pc.in
src/dummy/: DummyBackend.cpp  DummyBackend.hpp
src/echo/: EchoBackend.cpp  EchoBackend.hpp
src/margo/: MargoBackend.cpp  MargoBackend.hpp
src/zmq/: ZMQBackend.cpp  ZMQBackend.hpp
tests/: CMakeLists.txt  ClientTest.cpp  EchoProxyTest.cpp  MargoProxyTest.cpp  PassThroughProxyTest.cpp  ProxyTest.cpp  ZMQProxyTest.cpp  spack.yaml
tests/echo/: EchoBackend.cpp
tests/passthrough/: PassThroughBackend.cpp  PassThroughBackend.hpp
